# ashyterm

./: .gitignore  AGENTS.md  PROMPT.md  README.md  calamares-biglinux  default.nix  flake.nix  pyproject.toml  requirements.txt  test_models.py  test_net.py  test_openrouter.py  test_or.py  test_or2.py  test_or3.py  test_or4.py
.github/: copilot-instructions.md
docs/: chrome_tab_groups_reference.md  tab_groups_plan.md
locale/: ashyterm.pot  bg.po  comm-ashyterm.pot  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fix_translations.py  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt-BR.po  pt.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
nix/: libchildenv.nix
pkgbuild/: PKGBUILD  pkgbuild.install
src/ashyterm/: __init__.py  __main__.py  app.py  cli_parser.py  helpers.py  window.py  window_actions.py  window_ai_dialog.py  window_file_drop.py  window_layouts.py  window_lifecycle.py  window_tabs.py
src/ashyterm/core/: __init__.py  signals.py  tasks.py  ui_watchdog.py
src/ashyterm/data/: ai_history_manager.py  command_data.py  command_manager_builtins.py  command_manager_models.py  commands.py
src/ashyterm/filemanager/: accelerated_download.py  breadcrumb.py  cleanup.py  fm_column_view.py  fm_context_menu.py  ls_output.py  manager.py  models.py  operations.py  search.py  transfer_dialog.py  transfer_manager.py  transfer_sizes.py  transfers.py
src/ashyterm/sessions/: models.py  operations.py  storage.py  tree.py  tree_context_menu.py  tree_search.py  validation.py
src/ashyterm/settings/: config.py  highlight_colors.py  highlight_loader.py  highlights.py  manager.py  scrolling.py  validator.py
src/ashyterm/state/: window_state.py
src/ashyterm/terminal/: _cat_handler.py  _highlighter_impl.py  _highlighter_impl2.py  _streaming_handler.py  ai_assistant.py  ai_os_context.py  ai_provider_format.py  ai_providers.py  ai_response_parser.py  banner_manager.py  fm_integration.py  highlighter.py  manager.py  osc52.py  pane_manager.py  paste_confirmation.py  process_tracker.py  registry.py  scroll_handler.py  shell_prompt_detect.py  spawner.py  ssh_auto_reconnect.py  ssh_cleanup.py  ssh_connection_monitor.py  ssh_control.py  ssh_error_analyzer.py  ssh_lifecycle.py  ssh_options.py  ssh_process_detection.py  ssh_session_ops.py  ssh_spawn_callback.py  ssh_spawn_mixin.py  stream_buffering.py  stream_escapes.py  tab_attention.py  tab_close.py  tab_context_menu.py  tab_groups.py  tab_groups_controller.py  tab_move_controller.py  (+9 more)
src/ashyterm/ui/: actions.py  broadcast_manager.py  color_scheme_dialog.py  colors.py  command_toolbar.py  gtk_imports.py  header_bar_builder.py  menus.py  search_manager.py  sidebar_builder.py  sidebar_manager.py  (+2 more)
tests/: conftest.py  test_accelerated_download.py  test_ai_chat_theme.py  test_ai_history_manager.py  test_ai_os_context.py  test_ai_provider_format.py  test_ai_providers.py  test_ai_response_parser.py  test_async_tasks.py  test_atomic_json_write.py  test_audit_fixes.py  test_backup_kat.py  test_bash_markup_snapshots.py  test_breadcrumb.py  test_cli_integration.py  test_cli_parser.py  test_cli_parser_corpus.py  test_command_editor_data.py  test_command_editor_step_simple.py  test_command_editor_step_type.py  test_command_field_rows.py  test_command_manager_builtins.py  test_command_manager_models.py  test_command_toolbar.py  test_command_validation.py  test_config.py  test_crypto.py  test_file_operations_rsync.py  test_file_transfer_feedback.py  test_file_transfer_remote_timestamp.py  test_file_transfer_upload_on_save.py  test_filemanager_cleanup.py  test_filemanager_delegates.py  test_filemanager_search.py  test_filemanager_verified_command.py  test_header_bar_builder.py  test_highlighter_resilience.py  test_highlighting.py  test_highlighting_untested.py  test_icons.py  (+61 more)
(+397 files in other folders)
