[project]
name = "ashyterm"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
version = "0.1.0"
authors = [
    { name = "Leonardo Berbert", email = "leo4berbert@gmail.com" },
    { name = "Tales A. Mendonça", email = "talesam@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["PyGObject", "pycairo", "setproctitle", "requests"]

[project.gui-scripts]
ashyterm = "ashyterm:main"

[project.urls]
Homepage = "https://github.com/big-comm/ashyterm"
Issues = "https://github.com/big-comm/ashyterm/issues"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
include = ["ashyterm"]
