[project]
name = "ashyterm"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
version = "0.1.0"
authors = [
    { name = "Leonardo Berbert", email = "leo4berbert@gmail.com" },
    { name = "Tales A. Mendonça", email = "talesam@gmail.com" },
    { name = "Bruno Gonçalves", email = "bigbruno@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["PyGObject", "pycairo", "setproctitle", "requests", "psutil", "regex; extra == 'performance'", "Pygments; extra == 'syntax-highlighting'", "py7zr; extra == 'backup'"]

[project.gui-scripts]
ashyterm = "ashyterm:main"

[project.urls]
Homepage = "https://github.com/big-comm/ashyterm"
Issues = "https://github.com/big-comm/ashyterm/issues"

[project.optional-dependencies]
performance = ["regex"]
syntax-highlighting = ["Pygments"]
backup = ["py7zr"]
all = ["regex", "Pygments", "py7zr"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
include = ["ashyterm"]

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), isort (I)
select = ["E", "F", "W", "I"]

# E402: Module level import not at top of file
# E501: Line too long
# I001: [*] Import block is un-sorted or un-formatted
# W291 Trailing whitespace
# W293: Blank line contains whitespace
ignore = ["E402", "E501", "I001", "W291", "W293"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
